# pipguard

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: tests.yml
assets/: blocked-install-output.txt
fixtures/benign/normal_package/: __init__.py  main.py
pipguard/: __init__.py  __main__.py  cli.py
pipguard/core/: config.py  constants.py  exposure.py  hashing.py  paths.py  utils.py
pipguard/detectors/: chain_correlator.py  env_dump_detector.py  exfil_detector.py  import_time_detector.py  ioc_detector.py  obfuscation_detector.py  pth_detector.py  secret_path_detector.py  startup_file_detector.py  subprocess_detector.py
pipguard/doctor/: cache_inspector.py  doctor.py  env_inspector.py  history_inspector.py  ioc_packs.py  rotation_advice.py
pipguard/download/: downloader.py  installer.py  resolver.py
pipguard/models/: finding.py  package.py  report.py  verdict.py
pipguard/output/: json_report.py  markdown_report.py  terminal.py
pipguard/policies/: allowlist.py  default.py
pipguard/runtime/: env_audit.py  profiles.py  runner.py
pipguard/scan/: engine.py  python_ast.py  scoring.py  startup_hooks.py  text_rules.py
pipguard/unpack/: archive.py  sdist.py  wheel.py
scripts/: build_fixture_wheels.sh  demo_block.sh
tests/: test_chain_correlator.py  test_doctor.py  test_env_audit.py  test_env_dump_detector.py  test_exfil_detector.py  test_import_time_detector.py  test_install_block.py  test_pth_detector.py  test_runner.py  test_scan_folder.py  test_scan_wheel.py  test_secret_path_detector.py
(+3 files in other folders)
